--- a/src/main/resources/assets/sodium/lang/id_id.json
+++ b/src/main/resources/assets/sodium/lang/id_id.json
@@ -30,10 +30,10 @@
   "sodium.options.entity_distance.tooltip": "Mengubah sejauh manakah entitas yang dapat dilihat oleh pemain. Nilai yang lebih tinggi meningkatkan jarak pandang terhadap entitas, tetapi dapat mengurangi frame rate.",
   "sodium.options.entity_shadows.tooltip": "Jika diaktifkan, bayangan akan muncul dibawah mob dan entitas lain.",
   "sodium.options.vignette.name": "Vignette",
-  "sodium.options.vignette.tooltip": "Jika diaktifkan, efek vignette will akan terlihat di pengelihatan pemain. Ini tidak mungkin mempengaruhi frame rate.",
+  "sodium.options.vignette.tooltip": "Jika diaktifkan, efek vignette akan terlihat di pengelihatan pemain. Ini tidak mungkin mempengaruhi frame rate.",
   "sodium.options.mipmap_levels.tooltip": "Mengubah jumlah mipmap yang akan digunakan untuk tekstur blok. Nilai yang lebih tinggi berarti meningkatkan kualitas rendering blok yang jauh, tetapi dapat mempengaruhi performa dengan tekstur beranimasi dalam jumlah yang banyak.",
   "sodium.options.use_block_face_culling.name": "Gunakan Block Face Culling",
-  "sodium.options.use_block_face_culling.tooltip": "Jika diaktifkan, hanya sisi blok yang menghadap kamera yang akan di-render. Ini dapat menghilangkan banyak sisi blok lebih awal disaat proses rendering, menghemat bandwidth memori dan waktu di GPU. Beberapa resource pack mungkin bermasalah dengan opsi ini, cobalah untuk mematikan opsi ini jika anda melihat lubang di blok.",
+  "sodium.options.use_block_face_culling.tooltip": "Jika diaktifkan, hanya sisi blok yang menghadap kamera yang akan di-render. Ini dapat menghilangkan banyak sisi blok disaat proses rendering, menghemat bandwidth memori dan waktu di GPU. Beberapa resource pack mungkin bermasalah dengan opsi ini, cobalah untuk mematikan opsi ini jika anda melihat lubang di blok.",
   "sodium.options.use_fog_occlusion.name": "Gunakan Fog Occlusion",
   "sodium.options.use_fog_occlusion.tooltip": "Jika diaktifkan, chunks yang tersembunyi oleh efek kabut tidak akan di-render, membantu meningkatkan performa. Peningkatannya dapat menjadi lebih dramatis saat efek kabut lebih berat (seperti saat dibawah air), tetapi dapat menimbulkan visual artifacts diantara langit dan kabut di beberapa skenario.",
   "sodium.options.use_entity_culling.name": "Gunakan Entity Culling",
