--- a/src/main/resources/assets/sodium/lang/en_us.json
+++ b/src/main/resources/assets/sodium/lang/en_us.json
@@ -13,16 +13,15 @@
   "sodium.options.gui_scale.tooltip": "Sets the maximum scale factor to be used for the user interface. If 'auto' is used, then the largest scale factor will always be used.",
   "sodium.options.fullscreen.tooltip": "If enabled, the game will display in full-screen (if supported).",
   "sodium.options.v_sync.tooltip": "If enabled, the game's frame rate will be synchronized to the monitor's refresh rate, making for a generally smoother experience at the expense of overall input latency. This setting might reduce performance if your system is too slow.",
-  "sodium.options.fps_limit.tooltip": "Limits the maximum number of frames per second. This can help reduce battery usage and general system load when multi-tasking. If V-Sync is enabled, this option will be ignored unless it is lower than your display's refresh rate.",
+  "sodium.options.fps_limit.tooltip": "Limits the maximum number of frames per second. This can help reduce battery usage and general system load when multi-tasking. If VSync is enabled, this option will be ignored unless it is lower than your display's refresh rate.",
   "sodium.options.view_bobbing.tooltip": "If enabled, the player's view will sway and bob when moving around. Players who experience motion sickness while playing can benefit from disabling this.",
   "sodium.options.attack_indicator.tooltip": "Controls where the Attack Indicator is displayed on screen.",
   "sodium.options.autosave_indicator.tooltip": "If enabled, an indicator will be shown when the game is saving the world to disk.",
   "sodium.options.graphics_quality.tooltip": "The default graphics quality controls some legacy options and is necessary for mod compatibility. If the options below are left to \"Default\", they will use this setting.",
   "sodium.options.clouds_quality.tooltip": "Controls the presence of rendered clouds in the sky.",
   "sodium.options.weather_quality.tooltip": "Controls the quality of rain and snow effects.",
-  "sodium.options.leaves_quality.name": "Leaves Quality",
+  "sodium.options.leaves_quality.name": "Leaves",
   "sodium.options.leaves_quality.tooltip": "Controls the quality of leaves.",
-  "sodium.options.particle_quality.name": "Particle Quality",
   "sodium.options.particle_quality.tooltip": "Controls the maximum number of particles which can be present on screen at any one time.",
   "sodium.options.smooth_lighting.tooltip": "Controls whether blocks will be smoothly lit and shaded. This slightly increases the amount of time needed to re-build a chunk, but doesn't affect frame rates.",
   "sodium.options.biome_blend.value": "%s block(s)",
