--- a/src/main/resources/assets/sodium/lang/en_us.json
+++ b/src/main/resources/assets/sodium/lang/en_us.json
@@ -54,9 +54,7 @@
   "sodium.options.buttons.undo": "Undo",
   "sodium.options.buttons.apply": "Apply",
   "sodium.options.buttons.donate": "Buy us a coffee!",
-  "sodium.console.renderer_reload": "Reloading the renderer...",
-  "sodium.console.asset_reload": "Reloading resource packs... (this may take a few moments)",
-  "sodium.console.game_restart": "The game must be restarted to apply one or more settings!",
-  "sodium.console.broken_nvidia_driver": "Your NVIDIA graphics drivers are out of date!\n  * This will cause severe performance issues and crashes.\n  * Please update your graphics drivers to the latest version.\n(Read the log file for more information.)",
-  "sodium.console.pojav_launcher": "PojavLauncher is not supported when using Sodium. You are very likely to run into extreme performance issues, graphical bugs, and crashes. We will not provide technical support or help with these issues."
+  "sodium.console.game_restart": "The game must be restarted to apply one or more video settings!",
+  "sodium.console.broken_nvidia_driver": "Your NVIDIA graphics drivers are out of date!\n  * This will cause severe performance issues and crashes when Sodium is installed.\n  * Please update your graphics drivers to the latest version (version 536.23 or newer.)",
+  "sodium.console.pojav_launcher": "PojavLauncher is not supported when using Sodium.\n  * You are very likely to run into extreme performance issues, graphical bugs, and crashes.\n  * You will be on your own if you decide to continue -- we will not help you with any bugs or crashes!"
 }
