make translucency sorting options more user friendly

--- a/src/main/resources/assets/sodium/lang/en_us.json
+++ b/src/main/resources/assets/sodium/lang/en_us.json
@@ -57,11 +57,6 @@
   "sodium.console.game_restart": "The game must be restarted to apply one or more video settings!",
   "sodium.console.broken_nvidia_driver": "Your NVIDIA graphics drivers are out of date!\n  * This will cause severe performance issues and crashes when Sodium is installed.\n  * Please update your graphics drivers to the latest version (version 536.23 or newer.)",
   "sodium.console.pojav_launcher": "PojavLauncher is not supported when using Sodium.\n  * You are very likely to run into extreme performance issues, graphical bugs, and crashes.\n  * You will be on your own if you decide to continue -- we will not help you with any bugs or crashes!",
-  "sodium.options.sort_behavior.name": "Sort Behavior",
-  "sodium.options.sort_behavior.tooltip": "Controls when and with how much effort translucency sorting is performed. Dynamic and adaptive sorting will sort geometry as you move around. Lesser sort types perform sorting on an best-effort basis. The more sorting is performed the higher the performance impact.",
-  "options.sort_behavior.only_trivial": "No Sorting",
-  "options.sort_behavior.static_normal_relative": "Static Relative",
-  "options.sort_behavior.static_topo_acyclic": "Static Topological",
-  "options.sort_behavior.dynamic_all": "Auto",
-  "options.sort_behavior.only_dynamic_all": "Only Dynamic"
+  "sodium.options.sort_behavior.name": "Translucency Sorting",
+  "sodium.options.sort_behavior.tooltip": "Controls when and with how much effort translucency sorting is performed. Dynamic and adaptive sorting will sort geometry as you move around. Lesser sort types perform sorting on an best-effort basis. The more sorting is performed the higher the performance impact."
 }
