--- a/src/main/resources/assets/sodium/lang/en_us.json
+++ b/src/main/resources/assets/sodium/lang/en_us.json
@@ -61,5 +61,7 @@
   "sodium.console.core_shaders_warn": "The following resource packs may be incompatible with Sodium:",
   "sodium.console.core_shaders_info": "Check the game log for detailed information.",
   "sodium.options.sort_behavior.name": "Translucency Sorting",
-  "sodium.options.sort_behavior.tooltip": "Controls when and with how much effort translucency sorting is performed. Fancy attempts correct sorting everywhere while in Fast mode there may be glitches. More sorting has a performance impact on chunk loading speeds, but usually not frame rates."
+  "sodium.options.sort_behavior.tooltip": "Controls when and with how much effort translucency sorting is performed. Accurate mode attempts correct sorting everywhere while in Reduced mode there will be glitches. More sorting has a performance impact on chunk loading and update speeds, but usually not frame rates.",
+  "sodium.options.sort_behavior.reduced": "Reduced",
+  "sodium.options.sort_behavior.accurate": "Accurate"
 }
