--- a/src/main/resources/assets/sodium/lang/en_us.json
+++ b/src/main/resources/assets/sodium/lang/en_us.json
@@ -51,8 +51,10 @@
   "sodium.options.always_defer_chunk_updates.tooltip": "If enabled, rendering will never wait for chunk updates to finish, even if they are important. This can greatly improve frame rates in some scenarios, but it may create significant visual lag where blocks take a while to appear or disappear.",
   "sodium.options.defer_sorting.name": "Defer Sorting",
   "sodium.options.defer_sorting.always": "Always",
-  "sodium.options.defer_sorting.defer_one_frame": "Medium",
-  "sodium.options.defer_sorting.defer_zero_frames": "Least",
+  "sodium.options.defer_sorting.defer_one_frame": "Nearby Medium",
+  "sodium.options.defer_sorting.defer_zero_frames": "Nearby None",
+  "sodium.options.defer_sorting.defer_all_one_frame": "All Medium",
+  "sodium.options.defer_sorting.defer_all_zero_frames": "All None",
   "sodium.options.defer_sorting.tooltip": "Controls how much rendering waits for translucency sorting to finish, even if it is important. Brief holes in translucent blocks may be visible unless set to \"Least\".",
   "sodium.options.use_no_error_context.name": "Use No Error Context",
   "sodium.options.use_no_error_context.tooltip": "When enabled, the OpenGL context will be created with error checking disabled. This slightly improves rendering performance, but it can make debugging sudden unexplained crashes much harder.",
