--- a/src/main/resources/assets/sodium/lang/en_us.json
+++ b/src/main/resources/assets/sodium/lang/en_us.json
@@ -49,13 +49,14 @@
   "sodium.options.chunk_update_threads.tooltip": "Specifies the number of threads to use for chunk building and sorting. Using more threads can speed up chunk loading and update speed, but may negatively impact frame times. The default value is usually good enough for all situations.",
   "sodium.options.always_defer_chunk_updates.name": "Always Defer Chunk Updates",
   "sodium.options.always_defer_chunk_updates.tooltip": "If enabled, rendering will never wait for chunk updates to finish, even if they are important. This can greatly improve frame rates in some scenarios, but it may create significant visual lag where blocks take a while to appear or disappear.",
-  "sodium.options.defer_sorting.name": "Defer Sorting",
-  "sodium.options.defer_sorting.always": "Always",
-  "sodium.options.defer_sorting.defer_one_frame": "Nearby Medium",
-  "sodium.options.defer_sorting.defer_zero_frames": "Nearby None",
-  "sodium.options.defer_sorting.defer_all_one_frame": "All Medium",
-  "sodium.options.defer_sorting.defer_all_zero_frames": "All None",
-  "sodium.options.defer_sorting.tooltip": "Controls how much rendering waits for translucency sorting to finish, even if it is important. Brief holes in translucent blocks may be visible unless set to \"Least\".",
+  "sodium.options.sort_behavior.name": "Translucency Sorting",
+  "sodium.options.sort_behavior.tooltip": "Controls when and with how much effort translucency sorting is performed. While in Reduced mode there will be glitches, the other mods attempt accurate sorting with varying degrees of urgency to avoid holes and glitches during camera movement. More sorting has a performance impact on chunk loading and update speeds, but usually not frame rates.",
+  "sodium.options.sort_behavior.reduced": "Reduced",
+  "sodium.options.sort_behavior.df": "Accurate DF",
+  "sodium.options.sort_behavior.n1": "Accurate N1",
+  "sodium.options.sort_behavior.n0": "Accurate N0",
+  "sodium.options.sort_behavior.a1": "Accurate A1",
+  "sodium.options.sort_behavior.a0": "Accurate A0",
   "sodium.options.use_no_error_context.name": "Use No Error Context",
   "sodium.options.use_no_error_context.tooltip": "When enabled, the OpenGL context will be created with error checking disabled. This slightly improves rendering performance, but it can make debugging sudden unexplained crashes much harder.",
   "sodium.options.buttons.undo": "Undo",
@@ -66,9 +67,5 @@
   "sodium.console.pojav_launcher": "PojavLauncher is not supported when using Sodium.\n  * You are very likely to run into extreme performance issues, graphical bugs, and crashes.\n  * You will be on your own if you decide to continue -- we will not help you with any bugs or crashes!",
   "sodium.console.core_shaders_error": "The following resource packs are incompatible with Sodium:",
   "sodium.console.core_shaders_warn": "The following resource packs may be incompatible with Sodium:",
-  "sodium.console.core_shaders_info": "Check the game log for detailed information.",
-  "sodium.options.sort_behavior.name": "Translucency Sorting",
-  "sodium.options.sort_behavior.tooltip": "Controls when and with how much effort translucency sorting is performed. Accurate mode attempts correct sorting everywhere while in Reduced mode there will be glitches. More sorting has a performance impact on chunk loading and update speeds, but usually not frame rates.",
-  "sodium.options.sort_behavior.reduced": "Reduced",
-  "sodium.options.sort_behavior.accurate": "Accurate"
+  "sodium.console.core_shaders_info": "Check the game log for detailed information."
 }
