--- a/src/main/resources/assets/sodium/lang/en_us.json
+++ b/src/main/resources/assets/sodium/lang/en_us.json
@@ -50,13 +50,7 @@
   "sodium.options.always_defer_chunk_updates.name": "Always Defer Chunk Updates",
   "sodium.options.always_defer_chunk_updates.tooltip": "If enabled, rendering will never wait for chunk updates to finish, even if they are important. This can greatly improve frame rates in some scenarios, but it may create significant visual lag where blocks take a while to appear or disappear.",
   "sodium.options.sort_behavior.name": "Translucency Sorting",
-  "sodium.options.sort_behavior.tooltip": "Controls when and with how much effort translucency sorting is performed. While in Reduced mode there will be glitches, the other modes attempt accurate sorting with varying degrees of urgency to avoid holes and glitches during camera movement. More sorting has a performance impact on chunk loading and update speeds, but usually not frame rates.",
-  "sodium.options.sort_behavior.reduced": "Reduced",
-  "sodium.options.sort_behavior.df": "Accurate DF",
-  "sodium.options.sort_behavior.n1": "Accurate N1",
-  "sodium.options.sort_behavior.n0": "Accurate N0",
-  "sodium.options.sort_behavior.a1": "Accurate A1",
-  "sodium.options.sort_behavior.a0": "Accurate A0",
+  "sodium.options.sort_behavior.tooltip": "Enables translucency sorting. This avoids glitches in translucent blocks like water and glass when enabled and attempts to correctly present them even when the camera is in motion. This has a small performance impact on chunk loading and update speeds, but is usually not noticeable in frame rates.",
   "sodium.options.use_no_error_context.name": "Use No Error Context",
   "sodium.options.use_no_error_context.tooltip": "When enabled, the OpenGL context will be created with error checking disabled. This slightly improves rendering performance, but it can make debugging sudden unexplained crashes much harder.",
   "sodium.options.buttons.undo": "Undo",
