--- a/src/main/resources/assets/sodium/lang/en_us.json
+++ b/src/main/resources/assets/sodium/lang/en_us.json
@@ -1,4 +1,6 @@
 {
+  "sodium.name_renderer": "Sodium Renderer",
+  "sodium.name_renderer.settings": "Sodium Renderer Settings",
   "sodium.option_impact.low": "Low",
   "sodium.option_impact.medium": "Medium",
   "sodium.option_impact.high": "High",
@@ -53,13 +55,17 @@
   "sodium.options.use_no_error_context.tooltip": "When enabled, the OpenGL context will be created with error checking disabled. This slightly improves rendering performance, but it can make debugging sudden unexplained crashes much harder.",
   "sodium.options.buttons.undo": "Undo",
   "sodium.options.buttons.apply": "Apply",
+  "sodium.options.buttons.close": "Close",
   "sodium.options.buttons.donate": "Buy us a coffee!",
+  "sodium.prompt.donate.action": "Buy us a coffee",
   "sodium.console.game_restart": "The game must be restarted to apply one or more video settings!",
   "sodium.console.broken_nvidia_driver": "Your NVIDIA graphics drivers are out of date!\n  * This will cause severe performance issues and crashes when Sodium is installed.\n  * Please update your graphics drivers to the latest version (version 536.23 or newer.)",
   "sodium.console.pojav_launcher": "PojavLauncher is not supported when using Sodium.\n  * You are very likely to run into extreme performance issues, graphical bugs, and crashes.\n  * You will be on your own if you decide to continue -- we will not help you with any bugs or crashes!",
   "sodium.console.core_shaders_error": "The following resource packs are incompatible with Sodium:",
   "sodium.console.core_shaders_warn": "The following resource packs may be incompatible with Sodium:",
   "sodium.console.core_shaders_info": "Check the game log for detailed information.",
+  "sodium.console.config_not_loaded.title": "Could not load the configuration file",
+  "sodium.console.config_not_loaded.short": "Sodium failed to load the configuration file",
   "sodium.console.config_not_loaded": "The configuration file for Sodium has been corrupted, or is currently unreadable. Some options have been temporarily reset to their defaults. Please open the Video Settings screen to resolve this problem.",
   "sodium.console.config_file_was_reset": "The config file has been reset to known-good defaults."
 }
