--- a/src/main/resources/assets/sodium/lang/en_us.json
+++ b/src/main/resources/assets/sodium/lang/en_us.json
@@ -57,6 +57,7 @@
   "sodium.options.buttons.apply": "Apply",
   "sodium.options.buttons.close": "Close",
   "sodium.options.buttons.donate": "Buy us a coffee!",
+  "sodium.prompt.donate.contents": "Hello!\n\nIt seems that you've been enjoying §x27eb92Sodium§r, the free and open-source optimization mod for Minecraft.\n\nMods like these are complex. They require §xff6e00thousands of hours§r of development, debugging, and tuning to create the experience that players have come to expect.\n\nIf you'd like to show your token of appreciation, and support the development of our mod in the process, then consider §xed49cebuying us a coffee§r.\n\nAnd thanks again for using our mod! We hope it helps you (and your computer.)",
   "sodium.prompt.donate.action": "Buy us a coffee",
   "sodium.console.game_restart": "The game must be restarted to apply one or more video settings!",
   "sodium.console.broken_nvidia_driver": "Your NVIDIA graphics drivers are out of date!\n  * This will cause severe performance issues and crashes when Sodium is installed.\n  * Please update your graphics drivers to the latest version (version 536.23 or newer.)",
@@ -64,8 +65,9 @@
   "sodium.console.core_shaders_error": "The following resource packs are incompatible with Sodium:",
   "sodium.console.core_shaders_warn": "The following resource packs may be incompatible with Sodium:",
   "sodium.console.core_shaders_info": "Check the game log for detailed information.",
-  "sodium.console.config_not_loaded.title": "Could not load the configuration file",
-  "sodium.console.config_not_loaded.short": "Sodium failed to load the configuration file",
+  "sodium.console.config_corrupt.title": "Could not load the configuration file",
+  "sodium.console.config_corrupt.short": "Sodium failed to load the configuration file",
+  "sodium.console.config_corrupt.contents": "A problem occurred while trying to load the configuration file. This\ncan happen when the file has been corrupted on disk, or when trying\nto manually edit the file by hand.\n\nIf you continue, the configuration file will be reset back to known-good\ndefaults, and you will lose any changes that have since been made to your\\nVideo Settings.\n\nMore information about the error can be found in the log file.",
   "sodium.console.config_not_loaded": "The configuration file for Sodium has been corrupted, or is currently unreadable. Some options have been temporarily reset to their defaults. Please open the Video Settings screen to resolve this problem.",
   "sodium.console.config_file_was_reset": "The config file has been reset to known-good defaults."
 }
