Fix donation prompt

--- a/src/main/resources/assets/sodium/lang/en_us.json
+++ b/src/main/resources/assets/sodium/lang/en_us.json
@@ -57,7 +57,10 @@
   "sodium.options.buttons.apply": "Apply",
   "sodium.options.buttons.close": "Close",
   "sodium.options.buttons.donate": "Buy us a coffee!",
-  "sodium.prompt.donate.contents": "Hello!\n\nIt seems that you've been enjoying \u00A7x27eb92Sodium\u00A7r, the free and open-source optimization mod for Minecraft.\n\nMods like these are complex. They require \u00A7xff6e00thousands of hours\u00A7r of development, debugging, and tuning to create the experience that players have come to expect.\n\nIf you'd like to show your token of appreciation, and support the development of our mod in the process, then consider \u00A7xed49cebuying us a coffee\u00A7r.\n\nAnd thanks again for using our mod! We hope it helps you (and your computer.)",
+  "sodium.prompt.donate.contents.main": "Hello!\n\nIt seems that you've been enjoying %s, the free and open-source optimization mod for Minecraft.\n\nMods like these are complex. They require %s of development, debugging, and tuning to create the experience that players have come to expect.\n\nIf you'd like to show your token of appreciation, and support the development of our mod in the process, then consider %s.\n\nAnd thanks again for using our mod! We hope it helps you (and your computer.)",
+  "sodium.prompt.donate.contents.segment.1": "Sodium",
+  "sodium.prompt.donate.contents.segment.2": "thousands of hours",
+  "sodium.prompt.donate.contents.segment.3": "buying us a coffee",
   "sodium.prompt.donate.action": "Buy us a coffee",
   "sodium.console.game_restart": "The game must be restarted to apply one or more video settings!",
   "sodium.console.broken_nvidia_driver": "Your NVIDIA graphics drivers are out of date!\n  * This will cause severe performance issues and crashes when Sodium is installed.\n  * Please update your graphics drivers to the latest version (version 536.23 or newer.)",
