Separate Fast/Fancy for clouds, weather, leaves

--- a/src/main/resources/assets/sodium/lang/en_us.json
+++ b/src/main/resources/assets/sodium/lang/en_us.json
@@ -19,8 +19,14 @@
   "sodium.options.autosave_indicator.tooltip": "If enabled, an indicator will be shown when the game is saving the world to disk.",
   "sodium.options.graphics_quality.tooltip": "The default graphics quality controls some legacy options and is necessary for mod compatibility. If the options below are left to \"Default\", they will use this setting.",
   "sodium.options.clouds_quality.tooltip": "The quality level used for rendering clouds in the sky. Even though the options are labeled \"Fast\" and \"Fancy\", the effect on performance is negligible.",
+  "sodium.options.clouds_quality.fast": "Fast",
+  "sodium.options.clouds_quality.fancy": "Fancy",
   "sodium.options.weather_quality.tooltip": "Controls the distance that weather effects, such as rain and snow, will be rendered.",
+  "sodium.options.weather_quality.fast": "Fast",
+  "sodium.options.weather_quality.fancy": "Fancy",
   "sodium.options.leaves_quality.name": "Leaves",
+  "sodium.options.leaves_quality.fast": "Fast",
+  "sodium.options.leaves_quality.fancy": "Fancy",
   "sodium.options.leaves_quality.tooltip": "Controls whether leaves will be rendered as transparent (fancy) or opaque (fast).",
   "sodium.options.particle_quality.tooltip": "Controls the maximum number of particles which can be present on screen at any one time.",
   "sodium.options.smooth_lighting.tooltip": "Enables the smooth lighting and shading of blocks in the world. This can very slightly increase the amount of time it takes to load or update a chunk, but it doesn't affect frame rates.",
