add tooltip flag requirements

--- a/src/main/resources/assets/sodium/lang/en_us.json
+++ b/src/main/resources/assets/sodium/lang/en_us.json
@@ -43,6 +43,11 @@
   "sodium.options.cpu_render_ahead_limit.tooltip": "For debugging only. Specifies the maximum number of frames which can be in-flight to the GPU. Changing this value is not recommended, as very low or high values may create frame rate instability.",
   "sodium.options.cpu_render_ahead_limit.value": "%s frame(s)",
   "sodium.options.performance_impact_string": "Performance Impact: %s",
+  "sodium.options.flags_requirement_string": "Requires: %s",
+  "sodium.options.flag_renderer_reload": "Renderer Reload",
+  "sodium.options.flag_renderer_update": "Renderer Refresh",
+  "sodium.options.flag_assets_reload" : "Assets Reload",
+  "sodium.options.flag_game_restart": "Game Restart",
   "sodium.options.use_persistent_mapping.name": "Use Persistent Mapping",
   "sodium.options.use_persistent_mapping.tooltip": "For debugging only. If enabled, persistent memory mappings will be used for the staging buffer so that unnecessary memory copies can be avoided. Disabling this can be useful for narrowing down the cause of graphical corruption.\n\nRequires OpenGL 4.4 or ARB_buffer_storage.",
   "sodium.options.chunk_update_threads.name": "Chunk Update Threads",
