--- a/src/main/resources/assets/sodium/lang/ko_kr.json
+++ b/src/main/resources/assets/sodium/lang/ko_kr.json
@@ -7,8 +7,8 @@
   "sodium.options.pages.quality": "품질",
   "sodium.options.pages.performance": "성능",
   "sodium.options.pages.advanced": "고급",
-  "sodium.options.view_distance.tooltip": "렌더 거리 설정은 얼마나 멀리까지 지형을 렌더링할지 조절합니다. 거리가 짧을수록 렌더링되는 지형이 적어져 프레임 속도가 향상됩니다.",
-  "sodium.options.simulation_distance.tooltip": "시뮬레이션 거리 설정은 얼마나 멀리까지 지형과 개체를 로드하고 갱신할지를 조절합니다. 거리가 짧을수록 내부 서버의 부하가 줄어들어 프레임 속도가 향상될 수 있습니다.",
+  "sodium.options.view_distance.tooltip": "렌더 거리는 얼마나 멀리까지 지형을 렌더링할지 조절합니다. 거리가 짧을수록 렌더링되는 지형이 적어져 프레임 속도가 향상됩니다.",
+  "sodium.options.simulation_distance.tooltip": "시뮬레이션 거리는 얼마나 멀리까지 지형과 개체를 로드하고 갱신할지를 조절합니다. 거리가 짧을수록 내부 서버의 부하가 줄어들어 프레임 속도가 향상될 수 있습니다.",
   "sodium.options.brightness.tooltip": "게임의 밝기(감마)를 조절합니다.",
   "sodium.options.gui_scale.tooltip": "사용자 인터페이스에 사용할 최대 비율을 설정합니다. '자동'으로 설정되면 가장 큰 비율이 항상 사용됩니다.",
   "sodium.options.fullscreen.tooltip": "활성화되면 게임이 전체 화면 모드로 표시됩니다(지원되는 경우).",
